Refactor the code and uncomment the DB test files with a custom mock application yml for tests